
          Release Notes for Bacula 1.34.1

  Bacula code: Total files = 306 Total lines = 91,155 (*.h *.c *.in)

Changes for 1.34.1:  
- Autochanger users, please note you must add %d to the end of the
  changer command line in your Device resource in your bacula-sd.conf
  file.
- Make backup report say "Backup OK with warnings" if either FD or SD
  report any non-fatal errors.
- Modify bscan to print some elementary statistics (#Jobs, #Files, ...)
  added to catalog.
- Added --enable-wx-console and updated Makefile.in
- Fix mtx-changer so that the calling sequence is compatible
  with the previous version (the new one required arguments that
  were not necessarily used).
- Document how to use stunnel with Bacula.
- Fix crash in query command.
- Remove schedule from the default restore job.
- Fix data spooler to use min/max tape blocking factors.
- Automatically turn of conio if library not found instead of bombing.
- Cleaned up a lot of copyright dates.
- Try to keep spool statistics from going negative.
- Added new Pools chapter. Doc about using two disks.
- Attempt to keep the spool file statistics size from going
  negative.
- Fix the Director's Scheduled Jobs: list to have a ===
  termination.
- Fixed ./configure to disable readline rather than stop if
  readline.h is not found
- Fixed a typo in the SQLite database update script as reported
  by Robert J. Clark - thanks.
- Removed src/win32/pthreads and src/win32/zlib from the source
  tree.
- Created a new depkgs-win32 that has the pthreads and zlib source
  code.
- Removed the JobDefs from the default Restore job as it has a
  schedule. Thanks to Matt Howard for this.



Release 1.34.0
Major Features:
- Data spooling which reduces tape shoe-shine during Inc backups,         
  and permits multiple simultaneous backups without interleaved blocks.
- Native Win32 client -- much faster and restores permissions correctly
  (thanks to Christopher Hull)
- New Windows style installer for the Win32 Client.